--- a/www/templates/first.html
+++ b/www/templates/first.html
@@ -1,5 +1,5 @@
 đây là first
-<ion-content  style="background-color:#96d7e9">
+<ion-content  style="background: url(img/straw1.jpg) center; background-size: cover">
 <div class="container-fluid" >
 	<div class="header-first" style="margin-left:20px; margin-right:20px ;text-align:center ">
 		<h1 class="title-main" style="color: white"> Welcome to My Restaurant </h1>
