--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -16,25 +16,25 @@
       		</div>
 		</ion-header-bar>
 			
-			<ion-content>
+			<ion-content class="home-wrap">
 				<div class="row" style="margin-top:50px;">
-					<div class="col col-50" id="card-1" style="border-top:0;border-left:0;" ><a href="#menu"><img src="img/menu.png" class="cangiua"></a>
+					<div class="col col-45" id="card-1" style="border-top:0;border-left:0;" ><a href="#menu"><img src="img/menu.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-50" id="card-1"  style="border-top:0;border-right:0;" ><a href="#table"><img src="img/table1.png" class="cangiua"></a>
+					<div class="col col-45" id="card-1"  style="border-top:0;border-right:0;" ><a href="#table"><img src="img/table1.png" class="cangiua"></a>
 					</div>	
 				</div>
 				<div class="row" >
-					<div class="col col-50" id="card-1" style="border-left:0;" ><a href="#login"><img src="img/order4.png" class="cangiua"></a>
+					<div class="col col-45" id="card-1" style="border-left:0;" ><a href="#login"><img src="img/order4.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-50" id="card-1" style="border-right:0;"><a href="#login" >
+					<div class="col col-45" id="card-1" style="border-right:0;"><a href="#login" >
 					<img src="img/addstaff.png" class="cangiua">
 					</a>
 					</div>	
 				</div>
 				<div class="row">
-					<div class="col col-50" id="card-1" style="border-left:0;border-bottom:0;"><a href="#login"><img src="img/print.png" class="cangiua"></a>
+					<div class="col col-45" id="card-1" style="border-left:0;border-bottom:0;"><a href="#login"><img src="img/print.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-50" id="card-1"style="border-right:0;border-bottom:0;" ><a href="#login"><img src="img/about1.png" class="cangiua"></a>
+					<div class="col col-45" id="card-1"style="border-right:0;border-bottom:0;" ><a href="#login"><img src="img/about1.png" class="cangiua"></a>
 					</div>	
 				</div>
 			
