--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -43,15 +43,20 @@
 	</ion-side-menu-content>
 		
 		<ion-side-menu side="left">
+			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover;">
+	      		<div class="item-avatar">
+		      		<img src="img/cuu.png">
+		      		
+	      		</div>
+	      		<div class="menu-bottom" style="background-color:red">
+		        	{{username || 'unknown error'}}
+		      		</div>
+	    	</ion-header-bar>
+	    <ion-content>
 			<ion-list>
-				<ion-item ng-click="Home()">Home</ion-item>
+				<ion-item ng-click="logOut()">Log out</ion-item>
 			</ion-list>
-			<ion-list>
-				<ion-item ng-click="Acount()">Account</ion-item>
-			</ion-list>
-			<ion-list>
-				<ion-item ng-click="Logout()">Log out</ion-item>
-			</ion-list>
+		</ion-contet>
 		</ion-side-menu>
 	
 </ion-side-menus> 
