--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -173,3 +173,26 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		width: 100%;
 	}
 }
+
+.item-avatar {
+	img:first-child {
+		top: 53%;
+	    left: 9px;
+	    max-width: 62px !important;
+	    max-height: 62px !important;
+	}
+}
+
+.user-name{
+	float: left;
+    margin-top: 95px;
+    font-size: 16px;
+    font-family: cursive;
+    color: white;
+}
+
+.account {
+	.list{
+		margin-top: 102px;
+	}
+}
