--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,39 @@
+
 /* style */
+.modal{
+  top: 20% !important;
+  right: 10% !important;
+  bottom: 50% !important;
+  left: 10% !important;
+  overflow: visible !important;
+  min-height: 240px !important;
+  width: 80% !important;
+
+}
+#modalA {
+    border-color:#f77b55;
+    background-color: #f77b55;
+    background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
+    color: #fff;
+}
+/*CSS menu*/
+#itemheader.item-divider {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    min-height: 30px;
+    background-color:#f77b55;
+    color: #FFF;
+    font-weight: 500;
+}
+#itemheader.item-note {
+    float: right;
+    color: #FFF;
+    font-size: 15px;
+}
+@media (max-width: 680px) {
+    .active .modal-backdrop-bg {
+    opacity: .6;
+    transition: opacity 300ms ease-in-out;
+    background-color: #000;
+    }
+}
