--- a/www/templates/table.html
+++ b/www/templates/table.html
@@ -1,41 +1,51 @@
+ <ion-header-bar class="bar-calm">
+	<div class="buttons button-left header-item">
+		<span class="left-buttons">
+        <!--   	<button class="button button-icon button-clear ion-android-menu" ng-click="toggleLeft()"></button> -->
+        <a class="button button-icon button-calm ion-home" href="#home"></a>
+        </span>
+    </div>
+    <h1 class="title">Table</h1>
+</ion-header-bar>
+
 <ion-content style="background-color: #A8E9FB;">
  <div class="container">
-	 <div class="header-table">
+	 <!-- <div class="header-table">
 		 <a class="button button-icon button-small button-calm ion-arrow-left-c" href="#home"></a>
 		 <p>My Restaurant's table</p>
-	</div>
+	</div> -->
 
 	<div class="row">
 		<div class="col col-md-33 table">
-			<p class="table-number"> 1 </p>
+			<p class="table-number" ng-click="goToOrder()" id="1"> 1 </p>
 		</div>
 		<div class=" col col-md-33 table">
-			<p class="table-number"> 2 </p>
+			<p class="table-number" data-ng-click="goToOrder($element.target)" data-id="2"> 2 </p>
 		</div>
 		<div class="col col-md-33 table">
-			<p class="table-number"> 3 </p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col col-md-33 table">
-			<p class="table-number"> 4 </p>
-		</div>
-		<div class="col col-md-33 table">
-			<p class="table-number"> 5 </p>
-		</div>
-		<div class="col col-md-33 table">
-			<p class="table-number"> 6 </p>
+			<p class="table-number"ng-click="goToOrder()" id="3"> 3 </p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col col-md-33 table">
-			<p class="table-number"> 7 </p>
+			<p class="table-number"ng-click="goToOrder()" id="4"> 4 </p>
 		</div>
 		<div class="col col-md-33 table">
-			<p class="table-number"> 8 </p>
+			<p class="table-number"ng-click="goToOrder()" id="5"> 5 </p>
 		</div>
 		<div class="col col-md-33 table">
-			<p class="table-number"> 9 </p>
+			<p class="table-number"ng-click="goToOrder()" id="6"> 6 </p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col col-md-33 table">
+			<p class="table-number"ng-click="goToOrder()" id="7"> 7 </p>
+		</div>
+		<div class="col col-md-33 table">
+			<p class="table-number"ng-click="goToOrder()" id="8"> 8 </p>
+		</div>
+		<div class="col col-md-33 table">
+			<p class="table-number"ng-click="goToOrder()" id="9"> 9 </p>
 		</div>
 	</div>
 </div>
