del upload image

--- a/www/templates/first.html
+++ b/www/templates/first.html
@@ -13,7 +13,7 @@
           	<a class="button button-outline button-calm "  href="#sign-up"  style="width: 100px">Sign up</a>
         </div>
           <a class="button icon icon-right ion-chevron-right" href="#home">Menu</a> 
-           <a class="button icon icon-right ion-chevron-right" href="#upload-image">upload image</a> 
+           <!-- <a class="button icon icon-right ion-chevron-right" href="#upload-image">upload image</a>  -->
         </div>
  </div>
 </div>
