--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -1,7 +1,22 @@
-<div ng-model="table">order for table {{table}}</div>
+<div ng-model="table">order for table {{tableId}}</div>
+<ion-header-bar class="bar-calm">
+	<div class="buttons button-left header-item">
+		<span class="left-buttons">
+        <!--   	<button class="button button-icon button-clear ion-android-menu" ng-click="toggleLeft()"></button> -->
+        <a class="button button-icon button-calm ion-home" href="#table"></a>
+        </span>
+    </div>
+    <h1 class="title">Order for table {{tableId}}</h1>
 
+</ion-header-bar>
 <ion-content>
-
+	<div class="card ">
+    
+    <div class="item item-text-wrap" ng-repeat="item in items" ng-click="deleteItem()"> 
+      {{item.foodName}} 
+    </div>
+    
+  </div> 
 
 
 </ion-content>
