--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,7 +10,7 @@
   width: 80% !important;
 
 }
-#modalA {
+#AddFood {
     border-color:#f77b55;
     background-color: #f77b55;
     background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
