--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -18,21 +18,21 @@
 			
 			<ion-content class="home-wrap">
 				<div class="row" style="margin-top:10px;">
-					<div class="col col-45" id="home-menu" style="  border-right: 2px solid rgba(119, 116, 116, 0.1);; border-bottom: 2px solid rgba(119, 116, 116, 0.1);;" ><a href="#menu"><img src="img/menu.png" class="cangiua"></a>
+					<div class="col col-45" id="home-menu" ><a href="#menu"><img src="img/menu.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-45" id="home-table"  style="  border-bottom: 2px solid rgba(119, 116, 116, 0.1);;" ><a href="#table"><img src="img/table1.png" class="cangiua"></a>
+					<div class="col col-45" id="home-table" ><a href="#table"><img src="img/table1.png" class="cangiua"></a>
 					</div>	
 				</div>
 				<div class="row" >
-					<div class="col col-45" id="home-order" style="  border-right: 2px solid rgba(119, 116, 116, 0.1);; border-bottom: 2px solid rgba(119, 116, 116, 0.1);;" ><a href="#login"><img src="img/order4.png" class="cangiua"></a>
+					<div class="col col-45" id="home-order"  ><a href="#login"><img src="img/order4.png" class="cangiua"></a>
 					</div>	
-					<div class="col col-45" id="home-addstaff" style=" border-bottom: 2px solid rgba(119, 116, 116, 0.1);;"><a href="#login" >
+					<div class="col col-45" id="home-addstaff" ><a href="#login" >
 					<img src="img/addstaff.png" class="cangiua">
 					</a>
 					</div>	
 				</div>
 				<div class="row">
-					<div class="col col-45" id="home-print" style="  border-right: 2px solid rgba(119, 116, 116, 0.1);;"><a href="#login"><img src="img/print.png" class="cangiua"></a>
+					<div class="col col-45" id="home-print" ><a href="#login"><img src="img/print.png" class="cangiua"></a>
 					</div>	
 					<div class="col col-45" id="home-about"  ><a href="#login"><img src="img/about1.png" class="cangiua"></a>
 					</div>	
