--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,7 +15,7 @@
   </ion-refresher>
   <div class="card list">
     <div class="item item-divider" id="itemheader">Food Name <span class="item-note"id="itemheader"> Price</span></div>
-    <div class="item item-food" ng-repeat="item in items" ng-click="EditFood()" id="food-{{$index +1 }}"> 
+    <div class="item item-food" ng-repeat="item in items" ng-click="ChangeDetails.show()" id="food-{{$index +1 }}"> 
       {{item.foodName}} <span class="item-note"> {{item.foodPrice}}</span>
     </div>
       <div class="item ion-plus-round" ng-click="AddFood.show()">Add Item</div>
@@ -24,6 +24,28 @@
   </div> 
 
 </ion-content>
+
+
+<script id="templates/ChangeDetails.html" type="text/ng-template">
+      <ion-modal-view  style = "background-color:#484746; min-height: 220px !important;">
+        
+        <ion-content class="padding" >
+          <div class="list menu-change-detail-food">
+
+            <div class="item change-edit-food">
+              <button class="button button-full button-positive " ng-click="EditFood.show()" id="change-edit-food"> <span class="ion-edit" style="float:right">  </span> Edit Food </button>
+            </div>
+
+            <div class="item change-delete-food">
+              <button class="button button-full button-positive" ng-click="DeleteFood.show()"> <span class=" ion-close-circled" style="float:right">  </span>  Delete Food </button>
+            </div>
+
+            <button class="button button-full button-positive Change-cancel" ng-click="ChangeDetails.hide()">CANCEL</button>
+          </div>
+        </ion-content>
+      </ion-modal-view>
+    </script>
+    
 
 
 <script id="templates/AddFood.html" type="text/ng-template">
@@ -63,7 +85,7 @@
 
             <label class="item item-input">
               <span class="input-label" style=" margin: -5px; background-color: #F77B55; text-align: center; color: white; width: 32%; padding-top: 8px; padding-bottom: 4px;"> <img src="img/icon_food.png"></img> </span>
-              <input ng-model="editItem.foodName" id="foodName" type="text" style="padding-left: 10px;" placeholder="Food Name" value="{{item.foodName}}" required>
+              <input  ng-model="editItem.foodName" id="foodName" type="text" style="padding-left: 10px;" placeholder="Food Name" value="{{item.foodName}}" required>
             </label>
 
             <label class="item item-input">
@@ -71,9 +93,9 @@
               <input ng-model="editItem.foodPrice" id="foodPrice" type="text"  style="padding-left: 10px;" placeholder="Price" value="{{item.foodPrice}}" required>
             </label>
             
-            <button class="button button-full button-positive" style="background-color:#f77b55;border:0; width: 95%;; margin-top: 10px; border-radius: 0; float: left; margin-top: 0px; margin-right: 15px;" ng-click="EditItem(editItem)">OK</button>
+            <button class="button button-full button-positive edit-ok" ng-click="EditItem(editItem)">OK</button>
 
-            <button class="button button-full button-positive" style="background-color:#f77b55;border:0; width: 95%;; margin-top: 10px; border-radius: 0; float: right; margin-top: 0px; margin-right: 15px;" ng-click="EditFood.hide()">CANCEL</button>
+            <button class="button button-full button-positive edit-cancel" ng-click="EditFood.hide()">CANCEL</button>
           </div>
         </ion-content>
       </ion-modal-view>
