--- a/www/templates/orderDetail.html
+++ b/www/templates/orderDetail.html
@@ -10,15 +10,16 @@
 </ion-header-bar>
 <ion-content>
 <input ng-model="query[queryBy]"/>
-	<div class="card " ng-repeat="item in items|filter:query" style="margin:10px;padding:3%;width:25%" >
-    
-  
-      {{item.foodName}} 
-      <span class="item-note"> {{item.foodPrice}}</span>
+	<div class="orderdetalis-wrap" >
+  <div class="card clear-fix orderdetails-item" ng-repeat="item in items|filter:query"  >
+     
+     <span class="orderdetalis-foodName" > {{item.foodName}} </span>
+      <span class="item-note orderdetalis-foodPrice" style=""> 
+      <!-- <img src="img/bgr-price.png"  > -->{{item.foodPrice}}</span>
   
   </div> 
 
-
+</div>
 <!-- <div ng-repeat="item in items |filter:query">
   {{item.foodName}}
 </div> -->
