--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,8 +19,8 @@
       {{item.foodName}} <span class="item-note"> {{item.foodPrice}}</span>
     </div>
       <div class="item ion-plus-round" ng-click="AddFood.show()">Add Item</div>
-      <div class="item ion-edit" ng-click="EditFood.show()">Edit Item</div>
-      <div class="item ion-close-circled" ng-click="DeleteFood.show()">Delete Item</div>
+      <!-- <div class="item ion-edit" ng-click="EditFood.show()">Edit Item</div> -->
+      <!-- <div class="item ion-close-circled" ng-click="DeleteFood.show()">Delete Item</div> -->
   </div> 
 
 </ion-content>
