--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -43,7 +43,7 @@
 	</ion-side-menu-content>
 		
 		<ion-side-menu side="left">
-			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover;     height: 22%;">
+			 <ion-header-bar class="dark-bg expanded" style="background: url('img/straw1.jpg') center; background-size: cover; height: 22% !important;">
 	      		<div class="item-avatar">
 		      		<img src="img/howl's-moving-castle.jpg" >
 		      		
